framec_tests/language_specific/python/v3_mir/positive/not_at_sol_transition.frm
@target python

system S {
    machine:
        $A {
            e() {
                a(); -> $B(); b()
            }
        }
}

