framec_tests/language_specific/python/v3_mir/negative/transition_unknown_state.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $ZZ()
            }
        }
}

